--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  width:980px;
+  width:1000px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -8,6 +8,8 @@ body{
   display: inline;
 }
  img{
-   height: 300px;
-   width: 300px;
+   height: 250px;
+   width: 250px;
+   margin: 15px;
+   border: 3px solid black;
  }
