--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@ body{
   width:1000px;
   margin-left: auto;
   margin-right: auto;
+  background-color: green;
 }
 
-#productPictures{
-  display: inline;
+.head-logo{
+  background-color: white;
+  display: inline-block;
+  margin: 15px;
 }
  img{
    height: 250px;
@@ -13,3 +16,21 @@ body{
    margin: 15px;
    border: 3px solid black;
  }
+
+ .hiddenChartsButton{
+   display: none;
+ }
+
+.chartsButton{
+  display: inline-block;;
+  background-color: red;
+  margin: 5px;
+  padding: 10px;
+  font-size: 25px;
+  border: 5px solid black;
+  margin: 15px;
+}
+
+canvas{
+  background-color: white;
+}
